# libawm

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/color/: mod.rs
src/contrib/: layouts.rs
src/core/: config.rs
src/user_config/: mod.rs
