[package]
name = "libawm"
version = "0.1.0"
edition = "2021"
authors = ["atha gupte <74566464+Pandademic@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/pandademic/libawm"
readme = "README.md"
description = "The library that power's awm - forked from penrose"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[workspace]
members = [ "crates/*" ]

[features]
default = ["xcb", "xcb_draw", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]
xcb_draw = ["cairo-rs", "cairo-sys-rs", "pango", "pangocairo"]

[dependencies]
penrose_keysyms = { version = "0.1.1", path = "crates/penrose_keysyms", optional = true }
penrose_proc = { version = "0.1.3", path = "crates/penrose_proc" }

bitflags = "1.3.2"
nix = "0.23.1"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
thiserror = "1.0.30"
tracing = { version = "0.1.31", features = ["attributes", "log"] }

cairo-rs = { version = "0.15.6", features = ["xcb"], optional = true }
cairo-sys-rs = { version = "0.15.1", optional = true }
pangocairo = { version = "0.15.1", optional = true }
pango = { version = "0.15.6", optional = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
xcb = { version = "0.10.1", features = ["randr"], optional = true }
x11rb = { version = "0.9.0", features = ["randr"], optional = true }

[dev-dependencies]
paste = "1.0.6"
serde_json = "1.0.79"
simplelog = "0.11.2"
tracing-subscriber = "0.3.9"
test-case = "2.0.0"
