[package]
name = "libawm"
version = "0.1.0"
edition = "2021"
authors = ["pandademic <gh-no-reply-email>"]
license = "MIT"
repository = "https://github.com/pandademic/libawm"
readme = "README.md"
description = "the library that powers awm - forked from penrose"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[workspace]
members = [ "crates/*" ]

[features]
default = ["xcb", "xcb_draw", "keysyms"]
keysyms = ["penrose_keysyms"]
x11rb-xcb = ["x11rb", "x11rb/allow-unsafe-code"]
xcb_draw = ["cairo-rs", "cairo-sys-rs", "pango", "pangocairo"]

[dependencies]
penrose_keysyms = { version = "0.1.1", path = "crates/penrose_keysyms", optional = true }
penrose_proc = { version = "0.1.3", path = "crates/penrose_proc" }

bitflags = "1.2.1"
nix = "0.20.0"
strum = { version = "0.20.0", features = ["derive"] }
strum_macros = "0.20.1"
thiserror = "1.0.24"
tracing = { version = "0.1.25", features = ["attributes", "log"] }

cairo-rs = { version = "0.9.1", features = ["xcb"], optional = true }
cairo-sys-rs = { version = "0.10.0", optional = true }
pangocairo = { version = "0.10.0", optional = true }
pango = { version = "0.9.1", optional = true }
serde = { version = "1.0.125", features = ["derive"], optional = true }
xcb = { version = "0.9.0", features = ["randr"], optional = true }
x11rb = { version = "0.8.1", features = ["randr"], optional = true }

[dev-dependencies]
paste = "1.0.5"
serde_json = "1.0.64"
simplelog = "0.10.0"
tracing-subscriber = "0.2.17"
test-case = "1.1.0"
